# marketplace-tools

./: .gitignore  .gitmodules  .golangci.yml  BUILD  Dockerfile  Makefile  README.md  WORKSPACE  cloudbuild-tag.yaml  cloudbuild.yaml  go.mod  go.sum  repos.bzl
.github/workflows/: go.yml  tag.yaml
Formula/: mpdev.rb  update.sh
docs/: autogen-reference.md  deployment-manager-guide.md  mpdev-reference.md  setup-autocomplete.md
docs/terraform-k8s-app/: guide.md  terraform-k8s-app-packaging-guide.md
docs/terraform-k8s-app/starter-terraform-module/: README.md  gke.tf  helm.tf  marketplace_test.tfvars  outputs.tf  schema.yaml  variables.tf  versions.tf
examples/deployment-manager/autogen/multivm/: Kptfile  README.md  configurations.yaml
examples/deployment-manager/autogen/singlevm/: Kptfile  README.md  configurations.yaml  mpdev.yaml
examples/saas-template/: config.yaml
examples/saas-template/partner-integration/: README.md  config.yaml
examples/saas-template/product-lifecycle/: config.yaml
examples/terraform/complex_cli_only/: README.md  main.tf  variables.tf
examples/terraform/complex_cli_only/examples/marketplace_test/: main.tf
examples/terraform/complex_cli_only/examples/marketplace_test/.terraform/modules/: modules.json
examples/terraform/custom/: README.md  main.tf  variables.tf
examples/terraform/custom/examples/marketplace-test/: main.tf
examples/terraform/custom/examples/wordpress/: .gitignore  README.md  main.tf  marketplace_test.tfvars  metadata.display.yaml  metadata.yaml  versions.tf
examples/terraform/simple_cli_only/: README.md  main.tf  marketplace_test.tfvars
examples/terraform/wordpress/: README.md  autogen.yaml  main.tf  marketplace_test.tfvars  metadata.display.yaml  metadata.yaml  outputs.tf  variables.tf  versions.tf
examples/terraform_k8s/flask_app/: .dockerignore  Dockerfile  README.md  app.py  requirements.txt
examples/terraform_k8s/flask_app/chart/: Chart.yaml  values.yaml
examples/terraform_k8s/flask_app/chart/templates/: deployment.yaml  service.yaml
examples/terraform_k8s/flask_app/tf/: gke.tf  helm.tf  main.tf  marketplace_test.tfvars  metadata.display.yaml  metadata.yaml  outputs.tf  schema.yaml  variables.tf  versions.tf
examples/wordpress/: README.md
jsonschema/: mpdev.jsonschema
mpdev/: BUILD.bazel  main.go
mpdev/autogen/: BUILD.bazel  Dockerfile  autogen.go  autogen_test.go  go.mod  go.sum
mpdev/autogen/scripts/: install_protogen.sh  run_protogen.sh
mpdev/cmd/: BUILD.bazel  applycmd.go  commands.go  rootcmd.go  testcmd.go  tfcmd.go
mpdev/cmd/tf/: BUILD.bazel  overwritecmd.go
mpdev/internal/apply/: BUILD.bazel  autogen.go  container_process.go  deployment_manager.go  deployment_manager_test.go  image.go  registry.go  registry_test.go  resource.go  resource_test.go  types.go
mpdev/internal/docs/: BUILD.bazel  docs.go
mpdev/internal/resources/: BUILD.bazel  container_process.go  deployment_manager.go  deployment_manager_test.go  image.go  registry.go  registry_test.go  resource.go  resource_test.go  saas_listing.go  saas_listing_test.go  types.go
mpdev/internal/tf/: BUILD.bazel  overwrite.go  overwrite_test.go
mpdev/internal/util/: BUILD.bazel  util.go
scripts/: generate-jsonschema.sh  resource.proto  workspace-status.sh
