load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["overwritecmd.go"],
    importpath = "github.com/GoogleCloudPlatform/marketplace-tools/mpdev/cmd/tf",
    visibility = ["//visibility:public"],
    deps = [
        "//mpdev/internal/docs:go_default_library",
        "//mpdev/internal/tf:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
