load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "deployment_manager.go",
        "image.go",
        "types.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/marketplace-tools/mpdev/internal/apply",
    visibility = ["//mpdev:__subpackages__"],
    deps = ["@com_github_pkg_errors//:go_default_library"],
)
