load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "container_process.go",
        "deployment_manager.go",
        "image.go",
        "registry.go",
        "resource.go",
        "types.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/marketplace-tools/mpdev/internal/apply",
    visibility = ["//mpdev:__subpackages__"],
    deps = [
        "//mpdev/internal/util:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_gonum_v1_gonum//graph/simple:go_default_library",
        "@org_gonum_v1_gonum//graph/topo:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "registry_test.go",
        "resource_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
