load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "container_process.go",
        "deployment_manager.go",
        "image.go",
        "registry.go",
        "resource.go",
        "types.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/marketplace-tools/mpdev/internal/resources",
    visibility = ["//mpdev:__subpackages__"],
    deps = [
        "//mpdev/internal/util:go_default_library",
        "@com_github_hashicorp_go_multierror//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@io_k8s_utils//exec:go_default_library",
        "@org_gonum_v1_gonum//graph/simple:go_default_library",
        "@org_gonum_v1_gonum//graph/topo:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "deployment_manager_test.go",
        "registry_test.go",
        "resource_test.go",
    ],
    embed = [":go_default_library"],
    size = "small",
    deps = [
        "@com_github_hashicorp_go_multierror//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@io_k8s_utils//exec:go_default_library",
        "@io_k8s_utils//exec/testing:go_default_library",
    ],
)
