load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["overwrite.go"],
    importpath = "github.com/GoogleCloudPlatform/marketplace-tools/mpdev/internal/tf",
    visibility = ["//mpdev:__subpackages__"],
    deps = [
        "@com_github_hashicorp_hcl_v2//:go_default_library",
        "@com_github_hashicorp_hcl_v2//hclsyntax:go_default_library",
        "@com_github_hashicorp_hcl_v2//hclwrite:go_default_library",
        "@com_github_hashicorp_terraform_config_inspect//tfconfig:go_default_library",
        "@com_github_tidwall_gjson//:go_default_library",
        "@com_github_tidwall_sjson//:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["overwrite_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
