load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["util.go"],
    importpath = "github.com/GoogleCloudPlatform/marketplace-tools/mpdev/internal/util",
    visibility = ["//mpdev:__subpackages__"],
    deps = ["@io_k8s_utils//exec:go_default_library"],
)
